package range.db;

message NodeInfo {
	message Adjacency {
		required string id = 1;
		repeated uint64 versions = 2;
	}

	message Edges {
		repeated Adjacency edges = 1;
	}

	message Tags {
		message KeyValue { 
			message Values {
				required string data = 1;
				repeated uint64 versions = 2;
			}
			required string key = 1;
			required uint64 key_version = 4;
			repeated Values values = 2;
			repeated uint64 versions = 3;
		}
		repeated KeyValue keys = 1;
	}
		
	required uint64 list_version = 1;
	required uint32 crc32 = 2;
	required uint32 node_type = 3;
	required Edges forward = 4;
	required Edges reverse = 5;
	required Tags tags = 6;
	repeated uint64 graph_versions = 7;
}
